--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-allauth==0.32.0
 django-braces==1.11.0
 dj-database-url==0.4.2
 django-taggit==0.22.1
+taggit-selectize==2.3.0
 stripe==1.62.0
 psycopg2==2.7.1
