--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,3 @@
-# Django
-Django==1.11.3
-django-braces==1.11.0
-djangorestframework==3.6.3
-
-# Database
-dj-database-url==0.4.2
-psycopg2==2.7.1
-
-# Forms
-django-crispy-forms==1.6.1
-django-taggit==0.22.1
-taggit-selectize==2.3.0
-
-# Auth
-django-allauth==0.32.0
-
-# Testing
-factory-boy==2.9.2
-selenium==3.5.0
-
-stripe==1.62.0
+# Included because many Paas's require a requirements.txt file in the project root
+# Just installs the production requirements.
+-r requirements/dev.txt
