--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,6 @@ fabric.properties
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
 *$py.class
 
 # C extensions
@@ -55,17 +54,13 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
-var/
 wheels/
 *.egg-info/
 .installed.cfg
@@ -140,3 +135,6 @@ ENV/
 .ropeproject
 
 db.sqlite3
+/node_modules/
+/static/dist/
+/static/static-only/
