--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ sudo: false  # http://docs.travis-ci.com/user/migrating-from-legacy/
 language: python
 python:
   - 3.6
-install: pip install -r requirements/dev.txt
-before_script: python src/manage.py lint
-script: python src/manage.py test
+before_install: npm install
+install:
+  - pip install -r requirements/dev.txt
+  - node node_modules/webpack/bin/webpack.js
+before_script: cd src
+script:
+  - python src/manage.py lint
+  - python src/manage.py test
