--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ install:
 before_script: cd src
 script:
   - python manage.py lint
-  - python manage.py test
+  - coverage run --source=. manage.py test
+after_script:
+  - coveralls
