--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -6,3 +6,9 @@ known_third_party=selenium
 max-line-length=120
 exclude = migrations
 select = E,F,W,C90,T,B,I,Q,N
+
+[pep8]
+max-line-length = 120
+
+[yapf] 
+column_limit = 120
