--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -12,4 +12,5 @@ max-line-length = 120
 
 [yapf] 
 column_limit = 120
-split_before_logical_operator = false   # for fix pep8 W503
+# for fix pep8 W503
+split_before_logical_operator = False
