--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tryTen",
+  "name": "tryten",
   "version": "0.0.1",
   "eslintConfig": {
     "env": {
@@ -22,8 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.1",
     "eslint": "^4.9.0",
-    "eslint-plugin-react": "^7.4.0",
-    "phantomjs-prebuilt": "^2.1.15"
+    "eslint-plugin-react": "^7.4.0"
   },
   "scripts": {
     "webpack:deploy": "webpack --config ./webpack.config.js --progress",
